Revert "Fix image display wrapper in current preview not overflow bounds"
This reverts commit 5511c82714dbf1d1999d64e8bc357bafa34ddf37.

--- a/frontend/src/features/gallery/components/CurrentImageDisplay.scss
+++ b/frontend/src/features/gallery/components/CurrentImageDisplay.scss
@@ -22,7 +22,6 @@
     object-fit: contain;
     max-width: 100%;
     max-height: 100%;
-    width: max-content;
     height: auto;
     position: absolute;
   }
